# dotnet-nativeaot-test

./: .gitignore  AGENTS.md  Directory.Build.props  README.md  build_aar.sh  build_android.sh  build_xcframework.sh  dotnet-nativeaot-test.sln  dotnet-nativeaot-test.slnx  nuget.config
01-HelloWorld/: HelloWorld.csproj  README.md
02-NativeLibrary/: Class1.cs  LoadLibrary.c  NativeLibrary.csproj  README.md  build-macos.sh  main.c
03-Templates/: README.md
03-Templates/AndroidLibTest/: AndroidLibTest.csproj  Class1.cs
03-Templates/AndroidTest/: AndroidTest.csproj
03-Templates/MacOSLibTest/: Class1.cs  MacOSLibTest.csproj
03-Templates/MacOSTest/: AppDelegate.cs  Info.plist  MacOSTest.csproj  Main.cs  Main.storyboard
03-Templates/iOSLibTest/: Class1.cs
03-Templates/iOSTest/: AppDelegate.cs  Info.plist  Main.cs  SceneDelegate.cs
04-RuntimePack/: .gitignore  README.md  build_xcframework.sh
04-RuntimePack/MyNativeAOTAndroid/: settings.gradle.kts
04-RuntimePack/MyNativeAOTAndroid/app/: build.gradle.kts
04-RuntimePack/MyNativeAOTLibrary/: Class1.cs  MyNativeAOTLibrary.csproj
MyNativeAOTAndroid/: settings.gradle.kts
MyNativeAOTAndroid/app/: build.gradle.kts
MyNativeAOTAndroid/app/src/main/cpp/: CMakeLists.txt  aot_jni.c  nativeaot_jni.c
MyNativeAOTAndroid/gradle/: libs.versions.toml
MyNativeAOTApple/MyNativeAOTApple/: ContentView.swift  MyNativeAOTApple-Bridging-Header.h  MyNativeAOTTestApp.swift  aot_nativemethods.h
MyNativeAOTApple/MyNativeAOTTApple.xcodeproj/: project.pbxproj
MyNativeAOTLibrary/: NativeAotEntryPoint.cs
NativeAotLib/: NativeAotLib.csproj
NativeAotLib.Android/: NativeAotLib.Android.csproj
NativeAotLib.Apple/: NativeAotLib.Apple.csproj
NativeAotLib.Core/: NativeAotEntryPoint.cs  NativeAotLib.Core.csproj
NativeAotLib/include/: aot_nativemethods.h
docs/: globalization-support.md  reducing-binary-size.md
examples/AndroidNativeAotExample/: settings.gradle.kts
examples/MyNativeAOTAndroid/: .gitignore
examples/MyNativeAOTAndroid/app/src/main/cpp/: CMakeLists.txt  aot_jni.c
include/: aot_nativemethods.h
src/NativeAotLib/: CoreLib.cs  NativeAotEntryPoint.cs  NativeAotLib.csproj  NativeMethods.cs
tests/NativeAotLib.Tests/: CoreLibTests.cs  NativeAotLib.Tests.csproj  NativeEntryPointTests.cs
(+42 files in other folders)
